# monitor-dashboard

./: .gitignore  Makefile  README.md  mandos lagged actuals.docx  mandos_compute_architecture.md  mandos_dashboard.jsx  mandos_dashboard_mock.jsx  mandos_lagged_actuals.md  mandos_presentation.pptx  monitor-dashboard.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: alerts.instructions.md  data-access.instructions.md  drift.instructions.md  features.instructions.md  metrics.instructions.md  streamlit.instructions.md  testing.instructions.md
.github/workflows/: ci.yml
docs/: architecture.md  data-model.md  development.md  pages.md
docs/design/: 01-ux-strategy.md  02-decisions.md  03-branding.md
src/monitor_dashboard/: __init__.py  app.py
src/monitor_dashboard/alerts/: __init__.py
src/monitor_dashboard/data/: mock_data.py  sklearn_data.py
src/monitor_dashboard/drift/: __init__.py
src/monitor_dashboard/features/: __init__.py
src/monitor_dashboard/metrics/: __init__.py
src/monitor_dashboard/pages/: 1_portfolio.py  2_model_summary.py  3_feature_monitor.py  4_performance.py
